--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "{{projectName}}",
+  "name": "Cat-Energy",
   "private": true,
   "description": "Личный проект «{{projectTitle}}» от HTML Academy",
   "devDependencies": {
