--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
-    "lint": "npm run editorconfig && npm run stylelint",
+    "test": "npm run editorconfig && npm run stylelint",
     "build": "gulp styles",
     "start": "gulp"
   },
